# NetLanding

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: main.py  models.py  requirements.txt  schemas.py
backend/routers/: banks.py  dashboard.py  entries.py  settings.py  sources.py
docs/: development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EntryModal.tsx  Layout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  toast.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Entries.tsx  Settings.tsx
src/netlanding/: __init__.py  __main__.py  database.py  main.py  models.py  schemas.py
src/netlanding/routers/: banks.py  dashboard.py  entries.py  settings.py  sources.py
src/netlanding/static/: index.html
src/netlanding/static/assets/: index-CcW9ol8b.css  index-D4PBc0my.js
